<resources>
    <string name="app_name">AquaManage</string>
    <string name="login_background">Login display background image.</string>
    <string name="signup_link">Don\'t have an account yet? Sign up.</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="login_button">Login</string>
    <string name="sign_in_to_continue">Sign in to continue</string>
    <string name="login_title">LOGIN</string>
    <string name="wave_image">Wave image</string>
    <string name="password_hint">password</string>
    <string name="email_hint">email</string>
    <string name="app_logo">App logo</string>
    <string name="dashboard">Dashboard</string>
    <string name="profile_name">Angel Dorothy</string>
    <string name="profile_photo_description">Fetches the user\'s profile photo</string>
    <string name="add_button">Add button</string>
    <string name="history_image_view">History image view</string>
    <string name="bell_notification_icon">Bell notification icon</string>
    <string name="add_device_button">Add device button</string>
    <string name="notification_profile_container">Container for notification and profile icon and name</string>
    <string name="history_icon">History icon</string>
    <string name="profile_icon">Profile icon</string>
    <string name="continue_with_facebook">Continue with Facebook</string>
    <string name="login_text">Already have an account? <u><font color='#006fb1'>Login here.</font></u></string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>


    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
    <string name="back_arrow">Back arrow</string>
    <string name="technical_support">Technical Support</string>
    <string name="technical_support_logo">Technical support logo</string>
    <string name="ph_level">pH Level:</string>
    <string name="tds">TDS:</string>
    <string name="turbidity">Turbidity:</string>
    <string name="device_name">Device name</string>
    <string name="_0">0</string>
    <string name="mark_all_as_read">Mark all as read</string>
    <string name="notification_image">Notification image</string>
    <string name="notification_message">Treatment Complete</string>
    <string name="notificationTime">3 min ago</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="water_quality_analysis">Water Quality Analysis</string>
    <string name="possible_usages">Possible Usages</string>
    <string name="for_uses">For uses</string>
    <string name="ok">OK</string>
    <string name="logo_for_push_notifications">Logo for push notifications</string>
    <string name="title">Title</string>
    <string name="push_notification_description">This is the notification description</string>
    <string name="treatment_complete_dialog_popup">Treatment complete dialog popup</string>
    <string name="treatment_complete">TREATMENT \n COMPLETE!</string>
    <string name="show_analysis">Show \n Analysis</string>
    <string name="edit_device">Edit Device</string>
    <string name="color">Color:</string>
    <string name="close">Close</string>
    <string name="add_a_device">Add a Device</string>
    <string name="scan_qr_code_of_the_device">Scan QR Code of the Device</string>
    <string name="open_qr_scanner">Open QR Scanner</string>
    <string name="plus_button">+</string>
    <string name="notifications">Notifications</string>
    <string name="view_details">View Details</string>
    <string name="delete_notification">Delete Notification</string>
    <string name="history">History</string>
    <string name="last_recognized_treatment">Latest</string>
    <string name="timestamp">Timestamp</string>
    <string name="got_it">Got It!</string>
    <string name="water_usage_note">Note:\nThis water is safe for non-potable uses only, such as irrigation, cleaning, flushing, or industrial processes. It is not suitable for drinking or food preparation without further treatment.</string>
    <string name="warning_sign">Warning sign</string>
    <string name="tds_description">Indicates the concentration of dissolved substances. Staying below this level helps prevent scaling and equipment damage.</string>
    <string name="tds_recommended_value"><![CDATA[Total Dissolved Solids (TDS): <1500 mg/L]]></string>
    <string name="turbidity_description">Measures water clarity. Lower NTU values mean clearer water with fewer suspended particles.</string>
    <string name="turbidity_recommended_value">Turbidity: 0 – 5 NTU</string>
    <string name="ph_description">A safe range indicating the water is neither too acidic nor too basic. Suitable for most non-potable uses.</string>
    <string name="ph_recommended_value">pH Level: 7.00 – 10.00</string>
    <string name="water_quality_guidelines">Water Quality Guidelines</string>
    <string name="_65">65%</string>
    <string name="useful_water_uses">You have successfully treated your water! While this water is not safe for drinking, you can still use it for tasks like watering plants, flushing toilets, cleaning, or other non-potable purposes. Make the most of your treated water while conserving fresh resources.</string>
    <string name="harmful_water">Your water did not meet the quality standards. Please restart the treatment process to ensure safe and clean water. Make sure your device is functioning properly.</string>
    <string name="water_usage_illustration">Water usage illustration</string>
</resources>