<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/bg_wave"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="0dp"
        android:contentDescription="@string/login_background"
        android:scaleType="fitXY"
        android:src="@drawable/bg" />

    <ImageView
        android:id="@+id/logo"
        android:layout_width="350dp"
        android:layout_height="350dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:contentDescription="@string/wave_image"
        android:src="@drawable/amlogo" />

    <TextView
        android:id="@+id/login_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/logo"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:text="@string/login_title"
        android:textSize="35sp"
        android:textColor="#000000"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/login_subtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/login_title"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:text="@string/sign_in_to_continue"
        android:textSize="15sp"
        android:textColor="#000000"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@id/login_subtitle"
        android:layout_marginTop="30dp"
        android:layout_marginHorizontal="30dp"
        android:textAllCaps="false"
        android:textColor="#FFFFFF"
        android:fontFamily="@font/poppins_bold"
        android:text="@string/continue_with_facebook"
        android:padding="10dp"
        android:background="@drawable/edittext_background"
        android:backgroundTint="@color/facebook_blue"
        tools:ignore="TextFields" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@id/email"
        android:layout_marginTop="10dp"
        android:layout_marginHorizontal="30dp"
        android:textAllCaps="false"
        android:textColor="#000000"
        android:fontFamily="@font/poppins_bold"
        android:text="I'll use email or phone"
        android:background="@drawable/edittext_background"
        android:padding="10dp"
        android:backgroundTint="#C3DDDA" />

    <Button
        android:id="@+id/login_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/password"
        android:layout_marginTop="20dp"
        android:layout_centerHorizontal="true"
        android:background="@drawable/rounded_button"
        android:text="@string/login_button"
        android:textColor="#FFFFFF"
        android:paddingLeft="30dp"
        android:paddingRight="30dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp" />

    <TextView
        android:id="@+id/signup_link"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/login_button"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:text="@string/signup_link"
        android:textColor="#90CAF9"
        android:textSize="14sp"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/forgot_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/signup_link"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:text="@string/forgot_password"
        android:textColor="#BBDEFB"
        android:textSize="14sp"
        tools:ignore="TextContrastCheck" />
</RelativeLayout>
