<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    tools:context=".DashboardActivity">

    <ImageView
        android:id="@+id/history_icon"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/history_image_view"
        android:src="@drawable/history"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true" />

    <ImageView
        android:id="@+id/bell_icon"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:contentDescription="@string/bell_notification_icon"
        android:src="@drawable/notification"
        android:layout_gravity="center_vertical"
        android:layout_alignBottom="@id/history_icon"
        android:layout_toStartOf="@id/profile_name"
        android:layout_marginEnd="1dp" />

    <TextView
        android:id="@+id/profile_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/profile_name"
        android:textSize="15sp"
        android:textColor="#000000"
        android:layout_gravity="center_vertical"
        android:layout_toStartOf="@id/profile_icon"
        android:layout_alignBottom="@id/history_icon"
        android:layout_marginBottom="20dp"
        android:layout_marginEnd="5dp" />

    <ImageView
        android:id="@+id/profile_icon"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_gravity="center_vertical"
        android:contentDescription="@string/profile_photo_description"
        android:layout_alignBottom="@id/history_icon"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="16dp"
        android:src="@drawable/profile"
        tools:ignore="ImageContrastCheck" />

    <TextView
        android:id="@+id/dashboard_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dashboard"
        android:textSize="30sp"
        android:textStyle="bold"
        android:textColor="#000000"
        android:layout_below="@id/history_icon"
        android:layout_marginTop="32dp"
        android:layout_marginStart="20dp" />

    <androidx.cardview.widget.CardView
        android:id="@+id/add_device_card_view"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_margin="30dp"
        android:layout_below="@id/dashboard_title"
        app:cardCornerRadius="50dp"
        app:cardBackgroundColor="@color/sky_blue"
        app:cardElevation="10dp">

        <RelativeLayout
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_height="wrap_content"
            android:layout_width="match_parent">

            <ImageView
                android:id="@+id/add_device_button"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:contentDescription="@string/add_button"
                android:foregroundGravity="center"
                android:src="@drawable/add_button"
                tools:ignore="RedundantDescriptionCheck" />

        </RelativeLayout>

    </androidx.cardview.widget.CardView>

</RelativeLayout>
