<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:padding="24dp"
    android:background="@drawable/add_device_backgroud"
    android:orientation="vertical"
    android:layout_gravity="center">

    <ImageView
        android:id="@+id/close_button"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:src="@drawable/close"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        android:contentDescription="@string/close" />

    <TextView
        android:id="@+id/dialog_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_a_device"
        android:textSize="24sp"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        tools:ignore="RelativeOverlap" />

    <TextView
        android:id="@+id/dialog_subtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/scan_qr_code_of_the_device"
        android:textSize="14sp"
        android:textColor="@android:color/white"
        android:layout_below="@id/dialog_title"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="8dp" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/open_qr_scanner_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/open_qr_scanner"
        android:textColor="@android:color/white"
        android:background="@drawable/rounded_button"
        android:layout_below="@id/dialog_subtitle"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:paddingLeft="30dp"
        android:paddingRight="30dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp" />


</RelativeLayout>
